Update 2-04. 프로그래밍 코드 최적화(02.24).md

--- a/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
+++ b/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
@@ -225,9 +225,31 @@ where
 </br>
 
 #### 1) Gateway에서 CDS OData 서비스 실행
-
+- `_CDS` → `@OData.publish: true` 로 CDS에서 자동 생성되는 OData 서비스
+- `_SRV` → `SEGW` 에서 직접 생성하는 수동 OData 프로젝트
 <img width="523" height="124" alt="image" src="https://github.com/user-attachments/assets/e7f108d9-a47d-48fc-9bdd-b8a0e278a93a" />
+</br>
+</br>
 
+- _CDS 서비스는 `@OData.publish: true` 를 썼기 때문에 자동 생성
+- 루트 CDS에 association으로 연결된 CDS는 publish 없이도 동일한 OData 서비스에 자동 포함
+- `@OData.entitySet.name` 은 Gateway에서 보이는 EntitySet 이름을 내가 직접 지정하는 애노테이션
+
+<img width="525" height="139" alt="image" src="https://github.com/user-attachments/assets/99f37176-18ea-4acf-9c86-0276db2b8ab5" />
+</br>
+</br>
+
+- `to_` 는 OData에서 association임을 나타내는 자동 접두사
+
+<img width="787" height="298" alt="image" src="https://github.com/user-attachments/assets/3776b53b-fd93-4738-9e05-119e81cabcdf" />
+</br>
+</br>
+
+- `$expand` 는 association 데이터를 함께 가져오는 확장 조회 옵션
+- `$expand` 로 상위에서 확장 조회하려면 `_Scarr,` 는 반드시 선언해야 함
+<img width="788" height="391" alt="image" src="https://github.com/user-attachments/assets/a464e420-e583-4ebe-ac07-d97ab35e43ff" />
+</br>
+</br>
 
 </br>
 </br>
