Update 2-04. 프로그래밍 코드 최적화(02.24).md

--- a/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
+++ b/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
@@ -230,10 +230,33 @@ where
 <img width="523" height="124" alt="image" src="https://github.com/user-attachments/assets/e7f108d9-a47d-48fc-9bdd-b8a0e278a93a" />
 </br>
 </br>
+</br>
 
+#### 2) CDS OData 자동 생성과 Association 확장 조회
 - _CDS 서비스는 `@OData.publish: true` 를 썼기 때문에 자동 생성
 - 루트 CDS에 association으로 연결된 CDS는 publish 없이도 동일한 OData 서비스에 자동 포함
 - `@OData.entitySet.name` 은 Gateway에서 보이는 EntitySet 이름을 내가 직접 지정하는 애노테이션
+  
+```abap
+@AbapCatalog.viewEnhancementCategory: [#NONE]
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'Scarr CDS View 2'
+@Metadata.ignorePropagatedAnnotations: true
+
+@OData.entitySet.name: 'Scarr'
+define view entity ZCDSSCARR2_B03 as select from scarr
+  association[0..*] to I_CurrencyText as _Text
+    on $projection.Currcode = _Text.Currency
+  association[*] to ZCDSSPFLI_B03 as _spfli 
+    on scarr.carrid = _spfli.Carr_id
+{
+  key carrid   as Carrid,   // 주석은 이렇게
+      carrname as Carrname,  // 주석 !!
+      currcode as Currcode,
+      
+      _spfli,
+      _Text
+```
 
 <img width="525" height="139" alt="image" src="https://github.com/user-attachments/assets/99f37176-18ea-4acf-9c86-0276db2b8ab5" />
 </br>
@@ -250,6 +273,11 @@ where
 <img width="788" height="391" alt="image" src="https://github.com/user-attachments/assets/a464e420-e583-4ebe-ac07-d97ab35e43ff" />
 </br>
 </br>
+</br>
+
+#### 3) 
+
+<img width="535" height="196" alt="image" src="https://github.com/user-attachments/assets/e3a47b8d-77f9-4dce-a580-3224ada8efe7" />
 
 </br>
 </br>
