Update 2-04. 프로그래밍 코드 최적화(02.24).md

--- a/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
+++ b/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
@@ -268,7 +268,7 @@ define view entity ZCDSSCARR2_B03 as select from scarr
 </br>
 </br>
 
-- `$expand` 는 association 데이터를 함께 가져오는 확장 조회 옵션
+- `$expand` 는 association 데이터를 함께 가져오는 확장 조회 옵션 : `&$expand=to_Scarr`
 - `$expand` 로 상위에서 확장 조회하려면 `_Scarr,` 는 반드시 선언해야 함
 <img width="788" height="391" alt="image" src="https://github.com/user-attachments/assets/a464e420-e583-4ebe-ac07-d97ab35e43ff" />
 </br>
@@ -276,9 +276,55 @@ define view entity ZCDSSCARR2_B03 as select from scarr
 </br>
 
 #### 3) 
+- CDS에서 2단계 이상 경로 표현식을 사용하면, 중간 association의 키 필드를 projection에 반드시 포함해야 함
+- `_Scarr._spfli as _Spfli` 을 통해 Scarr 안의 또 다른 association(Spfli)을 OData에서 확장 조회할 수 있게 projection에 노출
+- `@OData.publish: true` (루트가 아니면) 없으면 그 CDS와 그 안의 association 모두 OData로 조회 불가
+
+```abap
+@AbapCatalog.sqlViewName: 'ZCDSFLT2_B03'
+@AbapCatalog.compiler.compareFilter: true
+@AbapCatalog.preserveKey: true
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'Flight CDS View 2'
+@Metadata.ignorePropagatedAnnotations: true
+
+@OData.publish: true
+@OData.entitySet.name: 'Flights'
+define view ZCDSFLIGHT2_B03 as select from sflight
+    association to ZCDSSCARR2_B03 as _Scarr
+    on sflight.carrid = _Scarr.Carrid
+{
+    key carrid as Carrid,
+    key connid as Connid,
+    key fldate as Fldate,
+    
+    @Semantics.amount.currencyCode: 'Currency'
+    @EndUserText.label: 'myPrice'
+    price as Price,
+    @Semantics.currencyCode: true
+    currency as Currency,
+    planetype as Planetype,
+    seatsmax as Seatsmax,
+    seatsocc as Seatsocc,
+    @Semantics.amount.currencyCode: 'Currency'
+    paymentsum as Paymentsum,
+    
+    _Scarr,
+    
+    // 경로표현식은 내부 조인이 일어나므로, 조인에 필요한 필드가 선언되어 있어야 함
+    // 따라서 _spfli 연결 시 사용되는 _Scarr.Carrid를 별도 선언함
+    _Scarr.Carrid as Carrier,
+    _Scarr._spfli as _Spfli // _Scarr 안에 있는 association _spfli 호출
+}
+```
 
 <img width="535" height="196" alt="image" src="https://github.com/user-attachments/assets/e3a47b8d-77f9-4dce-a580-3224ada8efe7" />
+</br>
+</br>
 
+<img width="727" height="410" alt="image" src="https://github.com/user-attachments/assets/7da39772-9e40-43da-b865-71436082bd31" />
+</br>
+</br>
 </br>
 </br>
 </br>
