--- a/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
+++ b/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
@@ -4,6 +4,7 @@
 - **3) CDS에서 CAST로 타입 변환 가능**
 - **4) 나누기 연산 시 CAST가 필요한 이유**
 - **5) CDS CASE 구문 정리 (Simple vs Complex 분기 구조)**
+- **6) CDS → OData → Gateway Client 흐름**
 </br>
 </br>
 
