Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -429,6 +429,23 @@ IF sy-subrc = 0.
   cl_demo_output=>display( gt_result ).
 ENDIF.
 ```
+```abap
+@AbapCatalog.viewEnhancementCategory: [#NONE]
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'Scarr CDS View 2'
+@Metadata.ignorePropagatedAnnotations: true
+define view entity ZCDSSCARR2_B03 as select from scarr
+  association[0..*] to I_CurrencyText as _Text
+    on $projection.Currcode = _Text.Currency
+  association[*] to ZCDSSPFLI_B03 as _spfli 
+    on scarr.carrid = _spfli.Carr_id
+{
+  key carrid   as Carrid,   // 주석은 이렇게
+      carrname as Carrname,  // 주석 !!
+      currcode as Currcode,
+      _Text[ 1: Language = $session.system_language ].CurrencyName as CurrName  // EN
+}
+```
 
 </br>
 </br>
