Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -7,6 +7,10 @@
 - **6) CDS WHERE·필터·집계 함수**
 - **7) ABAP SQL Association Path Expression 사용법**
 </br>
+
+- **`SELECT` 문은 FROM에 적힌 뷰의 중괄호 { } 안에 있는 이름만 부를 수 있음**
+  
+</br>
 </br>
 
 ---
