Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -8,7 +8,7 @@
 - **7) ABAP SQL Association Path Expression 사용법**
 </br>
 
-- **@Metadata.ignorePropagatedAnnotations:  : false는 하위 View의 필드 애노테이션을 그대로 전파하고, true는 그 전파를 무시함**
+- **`@Metadata.ignorePropagatedAnnotations: ` : false는 하위 View의 필드 애노테이션을 그대로 전파하고, true는 그 전파를 무시함**
 - **`SELECT` 문은 FROM에 적힌 뷰의 중괄호 { } 안에 있는 이름만 부를 수 있음**
   
 </br>
