--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -9,6 +9,9 @@
 </br>
 
 - **`@Metadata.ignorePropagatedAnnotations: ` : false는 하위 View의 필드 애노테이션을 그대로 전파하고, true는 그 전파를 무시함**
+- **`_Department._Head.LastName` 처럼 연속 Path Expression을 쓰면, Association 단계 수만큼 JOIN이 자동 생성됨**
+- **집계 함수(max, min, sum, avg 등)를 사용하면, 집계 대상이 아닌 모든 필드는 반드시 group by에 포함해야 함**
+- **상위 뷰는 하위 뷰를 select 하면 상위 View는 하위 View의 Association을 물려받지만, { }에서 실제로 사용해야만 접근 가능**
 - **`SELECT` 문은 FROM에 적힌 뷰의 중괄호 { } 안에 있는 이름만 부를 수 있음**
   
 </br>
@@ -409,7 +412,7 @@ define view entity ZCDSSCARR2_B03 as select from scarr
 
 ## < ABAP SQL Association Path Expression 사용법 >
 - JOIN을 직접 쓰지 않고 Association 경로로 데이터를 조회하는 방식
-- 상위 뷰는 하위 뷰를 select 하면, 그 안의 Association 경로도 함께 물려받아 그대로 사용할 수 있음 (재정의 불필요)
+- 상위 뷰는 하위 뷰를 select 하면 상위 View는 하위 View의 Association을 물려받지만, { }에서 실제로 사용해야만 접근 가능
 - 상위 뷰에서 `select from 하위뷰` 하면, 하위 뷰가 SELECT 해둔 일반 필드는 경로 없이 바로 SELECT 가능함
 - `\` → Association 시작 표시
 - `-` → Association 끝에서 실제 필드를 지정하는 구분자
