Update 2-04. 프로그래밍 코드 최적화(02.24).md

--- a/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
+++ b/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
@@ -63,7 +63,7 @@ define view entity Z_Literal_Example
 </br>
 
 ### 3) CDS에서 CAST로 타입 변환 가능
-- CDS는 CAST를 이용해 조회 시점에 데이터 타입을 원하는 형식으로 변환
+- CAST는 조회 시점에만 타입을 변환하며, SELECT 결과에서만 적용되고 실행이 끝나면 DB 원본 데이터와 타입은 그대로 유지됨
 - CDS는 CAST 시 기본 타입뿐 아니라 Data Element 기준으로도 변환 가능하며, 메타데이터까지 상속됨
 - `preserving type` 은 Data Element의 원래 기술적 속성(길이, 도메인, 내부 타입 등)을 그대로 유지하면서, 타입 참조만 새 Data Element로 연결하는 옵션
 ```abap
