Update 2-04. 프로그래밍 코드 최적화(02.24).md

--- a/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
+++ b/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
@@ -318,6 +318,7 @@ define view ZCDSFLIGHT2_B03 as select from sflight
 }
 ```
 
+- 하위 뷰에 `@OData.entitySet.name` 을 명시하지 않으면, 보통 CDS 뷰의 이름이 엔티티셋 이름이 됨
 <img width="535" height="196" alt="image" src="https://github.com/user-attachments/assets/e3a47b8d-77f9-4dce-a580-3224ada8efe7" />
 </br>
 </br>
