Update 2-04. 프로그래밍 코드 최적화(02.24).md

--- a/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
+++ b/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
@@ -270,6 +270,9 @@ define view entity ZCDSSCARR2_B03 as select from scarr
 
 - `$expand` 는 association 데이터를 함께 가져오는 확장 조회 옵션 : `&$expand=to_Scarr`
 - `$expand` 로 상위에서 확장 조회하려면 `_Scarr,` 는 반드시 선언해야 함
+```abap
+/sap/opu/odata/SAP/ZCDSFLIGHT2_B03_CDS/Flights?$expand=to_Scarr,to_Spfli&$format=json
+```
 <img width="788" height="391" alt="image" src="https://github.com/user-attachments/assets/a464e420-e583-4ebe-ac07-d97ab35e43ff" />
 </br>
 </br>
