--- a/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
+++ b/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
@@ -279,7 +279,7 @@ define view entity ZCDSSCARR2_B03 as select from scarr
 </br>
 
 #### 3) CDS 2단계 경로 표현식과 OData 노출 구조
-- CDS에서 2단계 이상 경로 표현식을 사용하면, 중간 association의 키 필드를 projection에 반드시 포함해야 함
+- Association이 실제로 사용되어 JOIN이 발생하면, 연결 키 필드는 반드시 projection에 있어야 함
 - `_Scarr._spfli as _Spfli` 을 통해 Scarr 안의 또 다른 association(Spfli)을 OData에서 확장 조회할 수 있게 projection에 노출
 - publish는 생성 조건, 서비스 등록은 실행 조건 → 둘 중 하나라도 없으면 그 CDS와 그 안의 association 모두 OData로 조회 불가
 
