Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -1,1 +1,28 @@
+## <  핵심 개념 >
+- **1) CDS에서 산술 연산(계산 필드) 가능**
+- **2) CDS에서 Literal(고정값) 사용 가능**
+- **3) CDS에서 CAST로 타입 변환 가능**
+- **4) 나누기 연산 시 CAST가 필요한 이유**
+- **5) CDS CASE 구문 정리 (Simple vs Complex 분기 구조)**
+- **6) CDS → OData → Gateway Client 흐름**
+</br>
+</br>
 
+---
+
+</br>
+
+## < CDS Association 핵심 정리 >
+- <data source>는 다른 CDS View 또는 DB 테이블 모두 가능함
+- `{ }` 안에 `<alias>` 를 노출하면 → OData에서 EntitySet의 확장 대상으로 사용 가능
+```abap
+define view ZCDS_EXAMPLE
+  as select from <source>
+
+  association [*] to <data source> as <alias>
+    on <조건>
+{
+    <alias>
+}
+```
+</br>
