--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -16,13 +16,21 @@
 - <data source>는 다른 CDS View 또는 DB 테이블 모두 가능함
 - `{ }` 안에 `<alias>` 를 노출하면 → OData에서 EntitySet의 확장 대상으로 사용 가능
 ```abap
-define view ZCDS_EXAMPLE
-  as select from <source>
-
+define view ZCDS_EXAMPLE as select from <source>
   association [*] to <data source> as <alias>
     on <조건>
 {
     <alias>
+}
+```
+- Association이 있으면 필드 충돌 방지를 위해 데이터소스.필드명으로 명확히 적는 게 안전함
+```abap
+define view entity ZI_SPFLI as select from SPFLI
+  association [*] to SCARR as _Scarr
+    on SPFLI.carrid = _Scarr.carrid
+{
+  key SPFLI.carrid as Carr_Id,
+      connid
 }
 ```
 </br>
