Update 2-04. 프로그래밍 코드 최적화(02.24).md

--- a/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
+++ b/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
@@ -17,6 +17,7 @@
 
 ### 1) CDS에서 산술 연산(계산 필드) 가능 
 - 계산은 CDS에서, 조회는 ABAP에서 수행
+- 계산 결과만 보여주는 field를 따로 구성해서 화면에 표시 ( 캡슐화 )
 ```abap
 SELECT FROM ZS4D430_SQL_Logic
   FIELDS carrier_id,
