Update 2-04. 프로그래밍 코드 최적화(02.24).md

--- a/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
+++ b/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
@@ -80,7 +80,7 @@ define view entity ZS4D430_Sql02_Cast
   cast( '19891109' as abap.dats )      as dats       // 날짜형 DATS(YYYYMMDD → 날짜)로 변환
 
   cast( '19891109' as /dmo/flight_date )                as fldate,    // flight_date 데이터 엘리먼트 타입 적용
-  cast( '19891109' as /dmo/travel_id preserving type )  as travelid   // travel_id 타입 + DDIC 속성 유지
+  cast( '19891109' as /dmo/travel_id preserving type )  as travelid   // 동일 타입 변환 시 발생하는 경고를 제거 (19891109과 /dmo/travel_id 같은 type)
 }
 ```
 </br>
