Update 2-04. 프로그래밍 코드 최적화(02.24).md

--- a/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
+++ b/RAP/2-04. 프로그래밍 코드 최적화(02.24).md
@@ -196,8 +196,9 @@ define view entity ZCDSBOOK_B03
         when 'Y' then 'Economy'
         else '잘못된 유형의 좌석코드 입니다'
       end        as Class_Text,
-      
-      case when class != 'F'
+
+      // as 필드명은 가장 외부 case에만 한 번 작성
+      case when class != 'F'  // 중첩 case 이중 case
         then case when wunit = 'KG' and luggweight > 20 then 'X'
                   when wunit = 'LB' and luggweight > 40 then 'X'
                   else ' '
