--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -12,7 +12,7 @@
 
 </br>
 
-## < CDS Association 핵심 정리 >
+## < CDS Association 복습 정리 >
 - <data source>는 다른 CDS View 또는 DB 테이블 모두 가능함
 - `{ }` 안에 `<alias>` 를 노출하면 → OData에서 EntitySet의 확장 대상으로 사용 가능
 ```abap
@@ -33,4 +33,40 @@ define view entity ZI_SPFLI as select from SPFLI
       connid
 }
 ```
+</br>
+</br>
+
+---
+
+</br>
+
+## < ABAP SQL 내장 함수 정리 >
+
+### 1) Numeric Functions
+
+| 함수 | 의미 |
+|------|------|
+| `DIV()` | 정수 나눗셈 (몫 반환) |
+| `MOD()` | 나머지 반환 |
+| `DIVISION()` | 나눗셈 후 반올림하여 소수점까지 표시 |
+| `ROUND()` | 지정한 소수점 위치에서 반올림 |
+
+### 2) String Processing
+
+| 함수 | 의미 |
+|------|------|
+| `CONCAT()` | 문자열 연결 |
+| `UPPER()` | 대문자 변환 |
+| `LOWER()` | 소문자 변환 |
+| `SUBSTRING()` | 문자열 일부 추출 |
+
+### 3) Date and Time Processing
+
+| 함수 | 의미 |
+|------|------|
+| `IS_VALID()` | 날짜 형식 유효성 확인 |
+| `ADD_DAYS()` | 날짜에 일수 추가 |
+| `DAYS_BETWEEN()` | 두 날짜 사이 일수 계산 |
+| `WEEKDAY()` | 요일 반환 |
+| `EXTRACT_MONTH()` | 월 추출 |
 </br>
