--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -42,7 +42,7 @@ define view entity ZI_SPFLI as select from SPFLI
 
 ## < ABAP SQL 내장 함수 정리 >
 
-### 1) Numeric Functions
+#### < Numeric Functions >
 
 | 함수 | 의미 |
 |------|------|
@@ -51,7 +51,7 @@ define view entity ZI_SPFLI as select from SPFLI
 | `DIVISION()` | 나눗셈 후 반올림하여 소수점까지 표시 |
 | `ROUND()` | 지정한 소수점 위치에서 반올림 |
 
-### 2) String Processing
+#### < String Processing >
 
 | 함수 | 의미 |
 |------|------|
@@ -60,7 +60,7 @@ define view entity ZI_SPFLI as select from SPFLI
 | `LOWER()` | 소문자 변환 |
 | `SUBSTRING()` | 문자열 일부 추출 |
 
-### 3) Date and Time Processing
+#### < Date and Time Processing >
 
 | 함수 | 의미 |
 |------|------|
