--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -42,31 +42,33 @@ define view entity ZI_SPFLI as select from SPFLI
 
 ## < ABAP SQL 내장 함수 정리 >
 
-#### < Numeric Functions >
+#### < Numeric Functions (숫자 계산 관련 함수) >
 
-| 함수 | 의미 |
-|------|------|
-| `DIV()` | 정수 나눗셈 (몫 반환) |
-| `MOD()` | 나머지 반환 |
-| `DIVISION()` | 나눗셈 후 반올림하여 소수점까지 표시 |
-| `ROUND()` | 지정한 소수점 위치에서 반올림 |
+| 함수 | 의미 | 사용 예시 | 예시 의미 |
+|------|------|------------|------------|
+| `DIV()` | 정수 나눗셈 (몫 반환) | `DIV( field1, field2 )` | field1 ÷ field2의 정수 몫 (소수점 버림) |
+| `MOD()` | 나머지 반환 | `MOD( field1, field2 )` | field1 ÷ field2의 나머지 |
+| `DIVISION()` | 나눗셈 후 반올림하여 소수점까지 표시 | `DIVISION( field1, field2, 2 )` | field1 ÷ field2 결과를 소수점 2자리까지 반올림 |
+| `ROUND()` | 지정한 소수점 위치에서 반올림 | `ROUND( field, 2 )` | field 값을 소수점 2자리에서 반올림 |
 
-#### < String Processing >
 
-| 함수 | 의미 |
-|------|------|
-| `CONCAT()` | 문자열 연결 |
-| `UPPER()` | 대문자 변환 |
-| `LOWER()` | 소문자 변환 |
-| `SUBSTRING()` | 문자열 일부 추출 |
+#### < String Processing (문자열 처리 함수) >
 
-#### < Date and Time Processing >
+| 함수 | 의미 | 사용 예시 | 예시 의미 |
+|------|------|------------|------------|
+| `CONCAT()` | 문자열 연결 | `CONCAT( field1, field2 )` | field1과 field2를 이어붙임 |
+| `UPPER()` | 대문자 변환 | `UPPER( field )` | field 값을 모두 대문자로 변환 |
+| `LOWER()` | 소문자 변환 | `LOWER( field )` | field 값을 모두 소문자로 변환 |
+| `SUBSTRING()` | 문자열 일부 추출 | `SUBSTRING( field, 1, 3 )` | field의 1번째 위치부터 3글자 추출 |
 
-| 함수 | 의미 |
-|------|------|
-| `IS_VALID()` | 날짜 형식 유효성 확인 |
-| `ADD_DAYS()` | 날짜에 일수 추가 |
-| `DAYS_BETWEEN()` | 두 날짜 사이 일수 계산 |
-| `WEEKDAY()` | 요일 반환 |
-| `EXTRACT_MONTH()` | 월 추출 |
+#### < Date and Time Processing (날짜·시간 처리 함수) >
+
+| 함수 | 의미 | 사용 예시 | 예시 의미 |
+|------|------|------------|------------|
+| `IS_VALID()` | 날짜 형식 유효성 확인 | `IS_VALID( field )` | field가 올바른 날짜 형식인지 확인 |
+| `ADD_DAYS()` | 날짜에 일수 추가 | `ADD_DAYS( field, 10 )` | field 날짜에 10일 추가 |
+| `DAYS_BETWEEN()` | 두 날짜 사이 일수 계산 | `DAYS_BETWEEN( date1, date2 )` | date1과 date2 사이 일수 계산 |
+| `WEEKDAY()` | 요일 반환 | `WEEKDAY( field )` | field 날짜의 요일 반환 |
+| `EXTRACT_MONTH()` | 월 추출 | `EXTRACT_MONTH( field )` | field 날짜에서 월만 추출 |
+
 </br>
