Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -44,7 +44,8 @@ define view entity ZI_SPFLI as select from SPFLI
 </br>
 
 #### < Numeric Functions (숫자 계산 관련 함수) >
-
+- DIVISION은 나눗셈 후 반올림, ROUND는 계산 없이 기존 값만 반올림
+  
 | 함수 | 의미 | 사용 예시 | 예시 의미 |
 |------|------|------------|------------|
 | `DIV()` | 정수 나눗셈 (몫 반환) | `DIV( field1, field2 )` | field1 ÷ field2의 정수 몫 (소수점 버림) |
