Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -41,6 +41,7 @@ define view entity ZI_SPFLI as select from SPFLI
 </br>
 
 ## < ABAP SQL 내장 함수 정리 >
+- 내장함수의 파라미터가 궁금하면 해당 함수 키워드에서 F1 Help로 확인
 </br>
 
 #### < Numeric Functions (숫자 계산 관련 함수) >
