Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -46,6 +46,7 @@ define view entity ZI_SPFLI as select from SPFLI
 
 #### < Numeric Functions (숫자 계산 관련 함수) >
 - DIVISION은 나눗셈 후 반올림, ROUND는 계산 없이 기존 값만 반올림
+- CDS에서는 계산이나 함수 결과값을 별도 변수 없이 바로 필드로 정의할 수 있음
   
 | 함수 | 의미 | 사용 예시 | 예시 의미 |
 |------|------|------------|------------|
@@ -78,3 +79,49 @@ define view entity ZI_SPFLI as select from SPFLI
 | `EXTRACT_MONTH()` | 월 추출 | `EXTRACT_MONTH( field )` | field 날짜에서 월만 추출 |
 
 </br>
+</br>
+
+### 1) CDS 문자열 연결 예제 (CONCAT / CONCAT_WITH_SPACE)
+- concat_with_space는 공백 개수를 지정해 문자열을 연결하며, 함수 안에 다시 넣어 중첩 구성 가능
+  
+#### 1) ABAP SQL 코드
+```abap
+SELECT FROM /dmo/customer
+  FIELDS
+    " && 연산자를 사용한 문자열 연결 (CDS에서는 사용 불가)
+    street && ', ' && postal_code && ' ' && city AS address_expr,
+
+    " 함수 기반 문자열 연결
+    concat(
+      street,                                   " street 먼저 연결
+      concat_with_space(
+        ',',                                    " 쉼표 추가
+        concat_with_space(
+          postal_code,                          " 우편번호
+          upper( city ),                        " 도시를 대문자로 변환
+          1                                     " 우편번호와 도시 사이 공백 1개
+        ),
+        1                                       " 쉼표와 우편번호 사이 공백 1개
+      )
+    ) AS address_func.
+```
+
+#### 2) CDS 코드
+```abap
+define view entity ZI_CUSTOMER
+  as select from /dmo/customer
+{
+  concat(
+    street,                                   // street 먼저 연결
+    concat_with_space(
+      ',',                                    // 쉼표 추가
+      concat_with_space(
+        postal_code,                          // 우편번호
+        upper( city ),                        // 도시를 대문자로 변환
+        1                                     // 우편번호와 도시 사이 공백 1개
+      ),
+      1                                       // 쉼표와 우편번호 사이 공백 1개
+    )
+  ) as address                                // 최종 주소 필드
+}
+```
