Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -82,7 +82,27 @@ define view entity ZI_SPFLI as select from SPFLI
 </br>
 </br>
 
-### 1) CDS 문자열 연결 예제 (CONCAT / CONCAT_WITH_SPACE)
+### 1) Numeric Functions Example (숫자 함수 사용 예제)
+#### 1) ABAP SQL 코드
+```abap
+SELECT FROM /dmo/flight
+  FIELDS
+    div( seats_occupied * 100, seats_max ) AS percentage_int,    " 정수 나눗셈 (몫만 반환)
+    division( seats_occupied * 100, seats_max, 2 ) AS percentage_dec.    " 나눗셈 후 소수점 2자리까지 반올림
+```
+#### 2) CDS 코드
+```abap
+define view entity ZI_FLIGHT as select from /dmo/flight
+{
+  div( seats_occupied * 100, seats_max )        as percentage_int,
+  division( seats_occupied * 100, seats_max, 2 ) as percentage_dec
+}
+```
+</br>
+</br>
+</br>
+
+### 2) CDS 문자열 연결 예제 (CONCAT / CONCAT_WITH_SPACE)
 - concat_with_space는 공백 개수를 지정해 문자열을 연결하며, 함수 안에 다시 넣어 중첩 구성 가능
   
 #### 1) ABAP SQL 코드
