Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -129,8 +129,7 @@ SELECT FROM /dmo/customer
 
 #### 2) CDS 코드
 ```abap
-define view entity ZI_CUSTOMER
-  as select from /dmo/customer
+define view entity ZI_CUSTOMER as select from /dmo/customer
 {
   concat(
     street,                                   // street 먼저 연결
@@ -144,5 +143,115 @@ define view entity ZI_CUSTOMER
       1                                       // 쉼표와 우편번호 사이 공백 1개
     )
   ) as address                                // 최종 주소 필드
+}
+```
+</br>
+</br>
+</br>
+
+### 3) Date Processing Example (날짜 처리 함수 예제)
+#### 1) ABAP SQL 코드
+```abap
+SELECT FROM /dmo/travel
+  FIELDS
+    is_valid( begin_date )                     AS valid,        " 날짜 형식 유효성 확인
+    add_days( begin_date, 7 )                  AS add_7_days,   " 시작일 + 7일
+    days_between( begin_date, end_date )       AS duration,     " 두 날짜 사이 일수 계산
+    extract_month( begin_date )                AS month,        " 월 추출
+    weekday( begin_date )                      AS weekday.      " 요일 반환
+```
+#### 2) CDS 코드
+- `dats_` 계열 함수는 DATS 타입 전용이므로, 문자열 날짜는 먼저 CAST가 필요함
+- `dats_add_days` 의 세 번째 파라미터는 오류 처리 옵션이며, 'FAIL'은 덤프 발생 가능, 'NULL'은 NULL 반환, 'INITIAL'은 초기값 반환
+```abap
+define view entity ZI_TRAVEL as select from /dmo/travel
+{
+  dats_is_valid( begin_date )                         as valid,       // CDS에서는 dats_ prefix 사용
+  dats_add_days( begin_date, 7, 'FAIL' )             as add_7_days,  // 7일 추가, 오류 시 FAIL 처리
+  dats_days_between( begin_date, end_date )          as duration,    // 날짜 차이 계산
+  substring( begin_date, 5, 2 )                      as month        // 5번째 위치부터 2자리 → 월 추출
+}
+```
+</br>
+</br>
+</br>
+
+### 4) CURRENCY CONVERSTION
+- 금액을 다른 통화로 환율 적용해서 변환하는 함수
+- `exchange_rate_date` 는 어떤 날짜의 환율을 적용할지 지정하는 필드
+  
+#### 1) ABAP SQL 코드
+```abap
+SELECT FROM /dmo/travel
+  FIELDS
+    currency_conversion(
+      amount             = total_price,     " 변환할 금액
+      source_currency    = currency_code,   " 기존 통화
+      target_currency    = 'EUR',           " 목표 통화
+      exchange_rate_date = begin_date       " 환율 기준 날짜
+    ) AS total_price_EUR.
+```
+
+#### 2) CDS 코드
+- CDS에서는 파라미터 전달 시 `=` 가 아니라 `=>` 를 사용해야 함
+- CDS는 타입에 엄격하므로 통화코드(CUKY)는 `CAST()` 로 맞춰줘야 함
+```abap
+define view entity ZI_TRAVEL as select from /dmo/travel
+{
+  currency_conversion(
+    amount             => total_price,                      // 변환할 금액
+    source_currency    => currency_code,                    // 기존 통화
+    target_currency    => cast( 'EUR' as abap.cuky ),       // CDS는 타입 엄격 → CAST 필요
+    exchange_rate_date => begin_date                        // 환율 적용 기준 날짜
+  ) as total_price_EUR
+}
+```
+</br>
+</br>
+</br>
+
+### 5) Timestamp Conversion (타임스탬프 날짜 변환)
+- 타임존을 고려해 Timestamp(날짜+시간)를 날짜(DATS)만으로 변환하는 함수
+- ABAP은 필수값만 넘기고 client, on_error는 생략 가능하지만, CDS는 모두 작성해야 함
+- 'FAIL', 'NULL', 'INITIAL'은 오류 발생 시 각각 덤프 발생, NULL 반환, 초기값 반환으로 처리 방식을 지정하는 옵션
+- `tstmp_to_dats()` 의 타임존 파라미터는 CHAR(6) 타입
+
+#### 1) ABAP SQL 코드
+```abap
+tstmp_to_dats(
+  tstmp     = <timestamp>,     " 날짜+시간이 들어있는 Timestamp 값 (DEC 15,0)
+  tzone     = <timezone>,      " 변환 기준 타임존 (예: 'UTC', 'EST')
+  client    = <client>,        " 클라이언트 번호 (시스템 구분값, 선택)
+  on_error  = <error_option>   " 오류 처리 방식 ('FAIL' / 'NULL' / 'INITIAL', 선택)
+)
+```
+```abap
+SELECT FROM /dmo/travel
+  FIELDS
+    tstmp_to_dats(
+      tstmp = cast( lastchangedat as dec(15,0) ),   " 날짜+시간(Timestamp) 값
+      tzone = cast( 'EST' as char(6) )              " 변환 기준 타임존 (미국 동부시간)
+      " client, on_error 는 선택 파라미터
+    ) AS date_est.                                  " 날짜(DATS)만 반환
+```
+
+#### 2) CDS 코드
+```abap
+tstmp_to_dats(
+  <timestamp>,      // Timestamp 값 (날짜+시간, DEC 15,0)
+  <timezone>,       // 타임존 (CHAR 6, 예: 'UTC')
+  <client>,         // 클라이언트 번호 (CLNT 타입)
+  <error_option>    // 오류 처리 옵션 ('FAIL' / 'NULL' / 'INITIAL')
+)
+```
+```abap
+define view entity ZI_TRAVEL as select from /dmo/travel
+{
+  tstmp_to_dats(
+    cast( lastchangedat as abap.dec(15,0) ),   // Timestamp 값 (날짜+시간)
+    cast( 'EST' as abap.char(6) ),             // 타임존 지정
+    cast( '001' as abap.clnt ),                // 클라이언트 (CDS는 필수)
+    'FAIL'                                     // 오류 처리 옵션
+  ) as date_est                                // 변환된 날짜
 }
 ```
