--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -255,3 +255,17 @@ define view entity ZI_TRAVEL as select from /dmo/travel
   ) as date_est                                // 변환된 날짜
 }
 ```
+</br>
+</br>
+</br>
+
+### 6) CDS Session Variable
+- `$session` 은 ABAP의 `sy-` 구조처럼 현재 로그인 세션 정보를 가져오는 변수
+- CDS에서도 SELECT 영역과 WHERE 절에서 모두 사용 가능
+```abap
+define view entity ZS4D430_Session_Variables as select from /DMO/I_Flight
+{
+  _Currency._Text[ 1: Language = $session.system_language ].CurrencyName as CurrencyName    // 현재 로그인 사용자의 언어 기준으로 통화 텍스트 조회
+}
+where FlightDate > $session.system_date    // 오늘 날짜 이후의 항공편만 조회
+```
