Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -176,7 +176,7 @@ define view entity ZI_TRAVEL as select from /dmo/travel
 </br>
 </br>
 
-### 4) CURRENCY CONVERSTION
+### 4) CURRENCY CONVERTION
 - 금액을 다른 통화로 환율 적용해서 변환하는 함수
 - `exchange_rate_date` 는 어떤 날짜의 환율을 적용할지 지정하는 필드
   
