--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -15,7 +15,7 @@
 ## < CDS Association 복습 정리 >
 - <data source>는 다른 CDS View 또는 DB 테이블 모두 가능함
 - `{ }` 안에 `<alias>` 를 노출하면 → OData에서 EntitySet의 확장 대상으로 사용 가능
-- { } 안에 에일리어스를 넣는 것은 데이터를 즉시 조회하라는 의미가 아니라, 외부에서 해당 Association 경로를 사용할 수 있도록 노출(경로 오픈)해두는 선언
+- `{ }` 안에 `<alias>` 를 노출하면 → 데이터를 즉시 조회하라는 의미가 아니라, 외부에서 해당 Association 경로를 사용할 수 있도록 노출(경로 오픈)해두는 선언
 ```abap
 define view ZCDS_EXAMPLE as select from <source>
   association [*] to <data source> as <alias>
