Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -107,6 +107,10 @@ define view entity ZI_FLIGHT as select from /dmo/flight
 - concat_with_space는 공백 개수를 지정해 문자열을 연결하며, 함수 안에 다시 넣어 중첩 구성 가능
   
 #### 1) ABAP SQL 코드
+- 두 문자열을 지정한 개수의 공백을 사이에 두고 연결
+```abap
+CONCAT_WITH_SPACE( <문자열1>, <문자열2>, <공백개수> )
+```
 ```abap
 SELECT FROM /dmo/customer
   FIELDS
