Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -111,6 +111,10 @@ define view entity ZI_FLIGHT as select from /dmo/flight
 ```abap
 CONCAT_WITH_SPACE( <문자열1>, <문자열2>, <공백개수> )
 ```
+- 두 문자열을 공백 없이 그대로 이어붙이는 함수
+```abap
+CONCAT( <문자열1>, <문자열2> )
+```
 ```abap
 SELECT FROM /dmo/customer
   FIELDS
