Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -271,6 +271,7 @@ define view entity ZI_TRAVEL as select from /dmo/travel
 ### 6) CDS Session Variable
 - `$session` 은 ABAP의 `sy-` 구조처럼 현재 로그인 세션 정보를 가져오는 변수
 - CDS에서도 SELECT 영역과 WHERE 절에서 모두 사용 가능
+- `$session.system_date` = CDS에서 현재 시스템 날짜(오늘 날짜)를 가져오는 세션 변수
 ```abap
 define view entity ZS4D430_Session_Variables as select from /DMO/I_Flight
 {
