Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -279,3 +279,12 @@ define view entity ZS4D430_Session_Variables as select from /DMO/I_Flight
 }
 where FlightDate > $session.system_date    // 오늘 날짜 이후의 항공편만 조회
 ```
+
+| CDS Session Variable        | 대응 ABAP System Field | 의미 설명 |
+|----------------------------|------------------------|------------|
+| $session.client            | sy-mandt               | 현재 로그인한 클라이언트 번호 |
+| $session.system_date       | sy-datum               | 시스템 기준 오늘 날짜 |
+| $session.system_language   | sy-langu               | 현재 세션의 언어 코드 (로그온 언어) |
+| $session.user              | sy-uname               | 현재 로그인한 사용자 ID |
+| $session.user_date         | sy-datlo               | 사용자 타임존 기준 오늘 날짜 |
+| $session.user_timezone     | sy-zonlo               | 사용자 개인 타임존 |
