Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -282,6 +282,16 @@ define view entity ZI_TRAVEL as select from /dmo/travel
 | $session.user_date         | sy-datlo               | 사용자 타임존 기준 오늘 날짜 |
 | $session.user_timezone     | sy-zonlo               | 사용자 개인 타임존 |
 
+- `$session.system_date` vs `$session.user_date` 차이 정리
+
+| 구분 | $session.system_date | $session.user_date |
+|------|----------------------|--------------------|
+| 기준 | 서버(시스템) 시간 기준 날짜 | 사용자 설정 타임존 기준 날짜 |
+| 모두 동일? | ⭕ 모든 사용자 동일 | ❌ 사용자마다 다를 수 있음 |
+| 타임존 영향 | ❌ 없음 | ⭕ 있음 (SU01 설정 기준) |
+| 쉽게 표현 | 회사 공식 오늘 | 내가 보는 오늘 |
+| 주 사용처 | 전표, 로그, 배치 프로그램 | 보고서, 화면 표시용 날짜 |
+
 ```abap
 define view entity ZS4D430_Session_Variables as select from /DMO/I_Flight
 {
