--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -66,6 +66,7 @@ define view entity ZI_SPFLI as select from SPFLI
 | `UPPER()` | 대문자 변환 | `UPPER( field )` | field 값을 모두 대문자로 변환 |
 | `LOWER()` | 소문자 변환 | `LOWER( field )` | field 값을 모두 소문자로 변환 |
 | `SUBSTRING()` | 문자열 일부 추출 | `SUBSTRING( field, 1, 3 )` | field의 1번째 위치부터 3글자 추출 |
+| `REPLACE()` | 문자열 치환 | `REPLACE( field, 'A', 'B' )` | field 안의 'A'를 'B'로 변경 |
 
 </br>
 
