Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -63,10 +63,13 @@ define view entity ZI_SPFLI as select from SPFLI
 | 함수 | 의미 | 사용 예시 | 예시 의미 |
 |------|------|------------|------------|
 | `CONCAT()` | 문자열 연결 | `CONCAT( field1, field2 )` | field1과 field2를 이어붙임 |
+| `CONCAT_WITH_SPACE()` | 공백 포함 문자열 연결 | `CONCAT_WITH_SPACE( field1, field2, 1 )` | field1과 field2를 공백 1칸 두고 연결 |
 | `UPPER()` | 대문자 변환 | `UPPER( field )` | field 값을 모두 대문자로 변환 |
 | `LOWER()` | 소문자 변환 | `LOWER( field )` | field 값을 모두 소문자로 변환 |
-| `SUBSTRING()` | 문자열 일부 추출 | `SUBSTRING( field, 1, 3 )` | field의 1번째 위치부터 3글자 추출 |
-| `REPLACE()` | 문자열 치환 | `REPLACE( field, 'A', 'B' )` | field 안의 'A'를 'B'로 변경 |
+| `SUBSTRING()` | 문자열 일부 추출 | `SUBSTRING( field, 1, 3 )` | 1번째 위치부터 3글자 추출 |
+| `LEFT()` | 왼쪽부터 n글자 추출 | `LEFT( field, 2 )` | 왼쪽에서 2글자 반환 |
+| `LENGTH()` | 문자열 길이 반환 | `LENGTH( field )` | 문자열의 총 길이 반환 |
+| `REPLACE()` | 문자열 치환 | `REPLACE( field, 'A', 'B' )` | 'A'를 'B'로 변경 |
 
 </br>
 
@@ -98,6 +101,41 @@ define view entity ZI_FLIGHT as select from /dmo/flight
 {
   div( seats_occupied * 100, seats_max )        as percentage_int,
   division( seats_occupied * 100, seats_max, 2 ) as percentage_dec
+}
+```
+```abap
+@AbapCatalog.sqlViewName: 'ZCDSFLT2_B03'
+@AbapCatalog.compiler.compareFilter: true
+@AbapCatalog.preserveKey: true
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'Flight CDS View 2'
+@Metadata.ignorePropagatedAnnotations: true
+
+@OData.publish: true
+@OData.entitySet.name: 'Flights'
+define view ZCDSFLIGHT2_B03 as select from sflight as f
+    association to ZCDSSCARR2_B03 as _Scarr
+    on f.carrid = _Scarr.Carrid
+{
+    key f.carrid as Carrid,
+    key f.connid as Connid,
+    key f.fldate as Fldate,
+    
+    @Semantics.currencyCode: true
+    f.currency as Currency,
+    f.seatsmax as Seatsmax,
+    
+    div(f.seatsmax, 10) as DivResult, // 몫 
+    mod(f.seatsmax, 10) as ModResult, // 나머지
+    
+    f.seatsocc as Seatsocc,
+    @Semantics.amount.currencyCode: 'Currency'
+    f.paymentsum as Paymentsum,
+    
+    // 값 나눗셈 후 소수점 1자리까지 표현(반올림)
+    division(paymentsum, 1, 1) as divisionResult,
+    // 소수점 1자리까지 표현(반올림)
+    round(paymentsum, 1) as RoundResult
 }
 ```
 </br>
@@ -153,6 +191,50 @@ define view entity ZI_CUSTOMER as select from /dmo/customer
       1                                       // 쉼표와 우편번호 사이 공백 1개
     )
   ) as address                                // 최종 주소 필드
+}
+```
+```abap
+@AbapCatalog.sqlViewName: 'ZCDSFLT2_B03'
+@AbapCatalog.compiler.compareFilter: true
+@AbapCatalog.preserveKey: true
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'Flight CDS View 2'
+@Metadata.ignorePropagatedAnnotations: true
+
+@OData.publish: true
+@OData.entitySet.name: 'Flights'
+define view ZCDSFLIGHT2_B03 as select from sflight as f
+    association to ZCDSSCARR2_B03 as _Scarr
+    on f.carrid = _Scarr.Carrid
+{
+    key f.carrid as Carrid,
+    key f.connid as Connid,
+    key f.fldate as Fldate,
+    
+    // concat : 문자열 합치기
+    // concat_with_space : 공백 포함 문자열 합치기
+    concat('CARRID,CONNID:',
+        concat_with_space( f.carrid,
+            concat_with_space( ',', f.connid, 3 ),   
+        3)
+     ) as CarrConnSTR,
+    
+    f.planetype as Planetype,
+    // planetype에 있는 문자열 'A340'을 'B111'로 변경
+    replace(f.planetype, 'A340', 'B111') as ReplaceSTR,
+    
+    // planetype에서 2번째 자리부터 5글자 자르기
+    // => 특이사항: -기호가 마지막자리로 잘리면, -가 맨앞에 표시됨
+    substring(f.planetype, 2, 5) as SubSTR,
+    
+    // 왼쪽에서부터 2글자 자르기
+    left(f.planetype, 2) as LeftSTR,
+    
+    // 소문자로 변경
+    lower(f.carrid) as LowerSTR, 
+    
+    // 문자열 길이 반환
+    length(f.planetype) as LengthSTR,
 }
 ```
 </br>
