Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -237,6 +237,9 @@ define view ZCDSFLIGHT2_B03 as select from sflight as f
     length(f.planetype) as LengthSTR,
 }
 ```
+
+<img width="940" height="230" alt="image" src="https://github.com/user-attachments/assets/a44a53cc-d3c5-4076-88b8-e362ca65e41b" />
+
 </br>
 </br>
 </br>
