Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -481,3 +481,94 @@ where
 - 결과 화면
   
 <img width="647" height="169" alt="image" src="https://github.com/user-attachments/assets/e70c5f58-3593-4033-b9f8-e7ef7f8834ea" />
+</br>
+</br>
+</br>
+</br>
+</br>
+
+---
+
+</br>
+
+## < CDS View에서 파라미터 설정하기 >
+</br>
+
+### 1) CDS 내부에서 파라미터 사용하는 경우
+- CDS 파라미터는 조회 조건을 고정하지 않고 실행할 때마다 값을 바꾸기 위해 외부에서 입력받는 변수
+- `파라미터이름 : 타입` 형식으로 선언하며, annotation 가능하고 Element List·CASE·함수·Filter·WHERE절에서 사용 가능
+- 여러 개의 파라미터를 선언할 때는 `,` (콤마)로 구분
+```abap
+$parameters.파라미터이름
+```
+```abap
+define view entity ZI_FLIGHT
+  with parameters                                // 파라미터 선언 영역
+       
+  @EndUserText.label: 'X for free seats, Space for occupied'
+  FreeOrOccupied  : abap.char(1),                // ':' 는 이름과 타입을 구분하는 기호 (이 변수의 타입은 char(1))
+  
+  BookingFee      : /dmo/booking_fee,           // 왼쪽=파라미터 이름 / 오른쪽=DDIC 타입
+  
+  TargetCurrency  : waers,                      // waers 타입(통화코드)
+  
+  @EndUserText.label: 'Only consider flights after this date'
+  FirstFlightDate : /dmo/flight_date,           // 날짜 타입
+  
+  Language        : spras                       // 언어 코드 타입
+
+as select from /DMO/I_Flight
+{
+   1. Element List에서 파라미터 사용
+   $parameters.TargetCurrency as CurrencyCode,
+
+   2. CASE 구문에서 파라미터 사용
+   case $parameters.FreeOrOccupied
+        when 'X' then MaximumSeats - OccupiedSeats
+        else OccupiedSeats
+   end as Seats,
+
+   3. 표현식/함수에서 파라미터 사용
+   currency_conversion(
+        amount             => Price,
+        source_currency    => CurrencyCode,
+        target_currency    => $parameters.TargetCurrency,
+        exchange_rate_date => FlightDate
+   ) as PriceConverted,
+
+   4. Filter Condition에서 파라미터 사용
+   _Currency._Text[ 1 : Language = $parameters.Language ].CurrencyName,
+
+   ...
+}
+
+5. WHERE 절에서 파라미터 사용
+where FlightDate > $parameters.FirstFlightDate
+```
+</br>
+</br>
+
+### 2) 파라미터 있는 CDS를 다른 CDS에서 호출하는 경우
+- 파라미터 있는 CDS를 데이터 소스로 사용할 때 괄호 `()` 안에서 값을 넘겨줘야 함
+```abap
+as select from <CDS이름>(
+    파라미터이름 : 값,
+    파라미터이름 : 값
+)
+```
+```abap
+define view entity ZS4D430_Use_Parameters
+  with parameters
+    Language            : spras,
+    BeginWithFlightDate : /dmo/flight_date
+
+as select from ZS4D430_Parameters(      // 파라미터 있는 CDS 호출
+    FreeOrOccupied  : 'X',              // 직접 값 전달
+    TargetCurrency  : 'EUR',            // 직접 값 전달
+    Language        : $parameters.Language,          // 상위 파라미터 전달
+    FirstFlightDate : $parameters.BeginWithFlightDate
+)
+{
+   ...
+}
+```
