Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -573,3 +573,40 @@ as select from ZS4D430_Parameters(      // 파라미터 있는 CDS 호출
    ...
 }
 ```
+</br>
+</br>
+</br>
+
+### 3) ABAP에서 CDS 파라미터 넘기는 방법 (신문법)
+#### 1) 리터럴 값으로 직접 전달
+- `=` 로 값 할당 (CDS와 다르게 `:` 아님)
+```abap
+SELECT FROM ZS4D430_Use_Parameters(
+    beginwithflightdate = '20230101',
+    language            = 'D'
+)
+FIELDS ...
+```
+
+#### 2) Host 변수로 전달 (신문법 @ 사용)
+- ABAP 변수는 `@` 붙여서 사용
+```abap
+DATA(today)    = cl_abap_context_info=>get_system_date( ).
+DATA(language) = cl_abap_context_info=>get_user_language_iso_format( ).
+
+SELECT FROM ZS4D430_Use_Parameters(
+    beginwithflightdate = @today,
+    language            = @language
+)
+FIELDS ...
+```
+
+#### 3) Host 표현식으로 바로 전달
+- 변수에 담지 않고 `@(...)` 로 바로 전달하는 방식
+```abap
+SELECT FROM ZS4D430_Use_Parameters(
+    beginwithflightdate = @( cl_abap_context_info=>get_system_date( ) ),
+    language            = @( cl_abap_context_info=>get_user_language_iso_format( ) )
+)
+FIELDS ...
+```
