Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -610,3 +610,62 @@ SELECT FROM ZS4D430_Use_Parameters(
 )
 FIELDS ...
 ```
+
+#### 4) 시스템 필드 자동 연결 (`@Environment.systemField` 사용)
+- `@Environment.systemField` 는 CDS 파라미터를 ABAP 시스템 필드(`sy-*`)와 자동 연결하는 어노테이션
+- ABAP에서 값을 따로 넘기지 않아도 시스템 날짜·언어 등이 자동으로 들어감
+```abap
+define view entity ZS4D430_Use_Parameters
+  with parameters
+    @Environment.systemField: #SYSTEM_LANGUAGE   // 로그인 언어(sy-langu) 자동 전달
+    Language            : spras,
+    @Environment.systemField: #SYSTEM_DATE       // 시스템 날짜(sy-datum) 자동 전달
+    BeginWithFlightDate : /dmo/flight_date
+
+as select from ...
+{ ... }
+```
+```abap
+SELECT FROM ZS4D430_Use_Parameters
+FIELDS ...
+```
+</br>
+</br>
+
+```abap
+@AbapCatalog.viewEnhancementCategory: [#NONE]
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'SBOOK CDS View'
+@Metadata.ignorePropagatedAnnotations: true
+define view entity ZCDSBOOK_B03
+  with parameters
+    paCarrid : s_carr_id,
+    paConnid : s_conn_id,
+    @Environment.systemField: #SYSTEM_DATE
+    paDate   : s_date,
+    paCurr   : abap.cuky
+  as select from sbook
+{
+  key carrid                   as Carrid,
+  key connid                   as Connid,
+  key fldate                   as Fldate,
+  key bookid                   as Bookid,
+      $parameters.paDate       as ParamDate
+}
+where
+      luggweight > 20
+  and forcurkey  = 'USD'
+  and carrid     = $parameters.paCarrid
+  and connid     = $parameters.paConnid
+```
+
+- 결과 확인
+
+<img width="418" height="248" alt="image" src="https://github.com/user-attachments/assets/f0e8a3ee-d978-491a-86fe-aa3437bed02a" />
+
+<img width="629" height="163" alt="image" src="https://github.com/user-attachments/assets/8fa17bc1-68c0-4040-9b92-0bb0e8c6232f" />
+
+<img width="416" height="228" alt="image" src="https://github.com/user-attachments/assets/8f9669ee-ea7c-49a6-a80c-fa832c996d0d" />
+
+<img width="601" height="171" alt="image" src="https://github.com/user-attachments/assets/de7202b7-4790-45b3-a9b5-6471c2cc2cc8" />
+
