Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -660,12 +660,14 @@ where
 ```
 
 - 결과 확인
-
+- 실행(F8)하면 파라미터 입력창이 뜨고, 필수값에는 * 표시가 있으며 대소문자를 구분
 <img width="418" height="248" alt="image" src="https://github.com/user-attachments/assets/f0e8a3ee-d978-491a-86fe-aa3437bed02a" />
 
+- `paDate` 에 값을 입력하면 입력한 날짜가 사용
 <img width="629" height="163" alt="image" src="https://github.com/user-attachments/assets/8fa17bc1-68c0-4040-9b92-0bb0e8c6232f" />
 
 <img width="416" height="228" alt="image" src="https://github.com/user-attachments/assets/8f9669ee-ea7c-49a6-a80c-fa832c996d0d" />
 
+- `paDate` 에 값을 입력하지 않으면 `@Environment.systemField: #SYSTEM_DATE` 에 의해 오늘 날짜가 자동 적용
 <img width="601" height="171" alt="image" src="https://github.com/user-attachments/assets/de7202b7-4790-45b3-a9b5-6471c2cc2cc8" />
 
