Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -614,6 +614,7 @@ FIELDS ...
 #### 4) 시스템 필드 자동 연결 (`@Environment.systemField` 사용)
 - `@Environment.systemField` 는 CDS 파라미터를 ABAP 시스템 필드(`sy-*`)와 자동 연결하는 어노테이션
 - ABAP에서 값을 따로 넘기지 않아도 시스템 날짜·언어 등이 자동으로 들어감
+- systemField가 지정된 파라미터는 필수값(*)이 아님
 ```abap
 define view entity ZS4D430_Use_Parameters
   with parameters
