Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -495,7 +495,7 @@ where
 </br>
 
 ### 1) CDS 내부에서 파라미터 사용하는 경우
-- CDS 파라미터는 조회 조건을 고정하지 않고 실행할 때마다 값을 바꾸기 위해 외부에서 입력받는 변수
+- CDS 파라미터는 조회 조건을 실행할 때마다 바꾸기 위해 외부에서 입력받는 변수이며 `with parameters` 로 선언하고 이름은 중복될 수 없음
 - `파라미터이름 : 타입` 형식으로 선언하며, annotation 가능하고 Element List·CASE·함수·Filter·WHERE절에서 사용 가능
 - 여러 개의 파라미터를 선언할 때는 `,` (콤마)로 구분
 ```abap
