Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -633,6 +633,7 @@ FIELDS ...
 </br>
 </br>
 
+- 예제 `ZCDSBOOK_B03`
 ```abap
 @AbapCatalog.viewEnhancementCategory: [#NONE]
 @AccessControl.authorizationCheck: #NOT_REQUIRED
