--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -662,6 +662,7 @@ where
 ```
 
 - 실행(F8)하면 파라미터 입력창이 뜨고, 필수값에는 * 표시가 있으며 대소문자를 구분
+- Data Preview에서 파라미터 값은 반드시 대문자로 입력해야 정상 조회됨
 <img width="418" height="248" alt="image" src="https://github.com/user-attachments/assets/f0e8a3ee-d978-491a-86fe-aa3437bed02a" />
 
 - `paDate` 에 값을 입력하면 입력한 날짜가 사용
