Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -646,6 +646,33 @@ SELECT FROM ZS4D430_Use_Parameters(
 )
 FIELDS ...
 ```
+- 예제 `ZCDSPARAMETER_B03`
+```abap
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'CDS View with parameters'
+@Metadata.ignorePropagatedAnnotations: true
+define root view entity ZCDSPARAMETER_B03
+  as select from ZCDSBOOK_B03(
+                 paCarrid: 'AA',
+                 paConnid: '0017',
+                 paDate: '20260101'
+                 )
+{
+  key Carrid,
+  key Connid,
+  key Fldate,
+  key Bookid,
+      ParamDate,
+      Customid,
+      Custtype,
+      Cust_Text,
+      Smoker
+}
+```
+<img width="410" height="264" alt="image" src="https://github.com/user-attachments/assets/9ea1227e-f171-4551-ac43-3f2da6e2a4b4" />
+
+<img width="575" height="161" alt="image" src="https://github.com/user-attachments/assets/9caa4840-721a-414f-a3d6-a0be348bf27e" />
+
 </br>
 </br>
 
