Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -716,3 +716,12 @@ FIELDS ...
 </br>
 
 ## < JOIN >
+</br>
+
+#### < ABAP CDS와 ABAP SQL 차이점 정리 (결과 집합 관련) >
+- `ORDER BY` ❌ → ABAP CDS에서는 지원하지 않음
+- `DISTINCT` → 위치가 ABAP SQL과 다름
+- `Aggregation` / `GROUP BY` → 집계 함수가 더 적고 AVG()는 AS dtype 필수
+- `JOIN` → ABAP SQL과 동일한 조인 타입, 필드에 데이터소스 접두어 필수 (행+행, 가로 결합)
+- `UNION` → 구조 완전 동일해야 함 (컬럼 수·타입·이름·키·annotation 일치, 행+행 세로 결합)
+</br>
