Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -725,3 +725,13 @@ FIELDS ...
 - `JOIN` → ABAP SQL과 동일한 조인 타입, 필드에 데이터소스 접두어 필수 (행+행, 가로 결합)
 - `UNION` → 구조 완전 동일해야 함 (컬럼 수·타입·이름·키·annotation 일치, 행+행 세로 결합)
 </br>
+
+#### < JOIN vs ASSOCIATION 차이 >
+- `JOIN`
+
+  - CDS 실행 시점에 바로 테이블을 합쳐서 조회 (정적)
+  - 호출되는 순간 연결된 데이터까지 한 번에 가져옴
+- `ASSOCIATION`
+
+  - 필요할 때만 조회 (동적)
+  - 기본 데이터 먼저 조회 후, 경로 사용 시 추가 조회됨
