--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -739,3 +739,22 @@ FIELDS ...
 </br>
 
 ### 1) DISTINCT 위치 차이
+- 중복된 행(Row)을 제거하고, 유일한 값만 조회하는 기능
+  
+#### 1) ABAP SQL 코드
+- `DISTINCT` 가 FIELDS 앞에 위치함
+```abap
+SELECT FROM /dmo/connection
+  FIELDS DISTINCT
+    airport_from_id,
+    distance_unit.
+```
+#### 2) CDS 코드
+- `distinct` 가 select 바로 뒤에 위치함
+```abap
+define view entity ZI_CONNECTION as select distinct from /dmo/connection
+{
+  airport_from_id,
+  distance_unit
+}
+```
