Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -741,7 +741,7 @@ FIELDS ...
 ### 1) DISTINCT 위치 차이
 - 중복된 행(Row)을 제거하고, 유일한 값만 조회하는 기능
   
-#### 1-1) 중복된 데이터 제거
+#### 1) 중복된 데이터 제거
 - `DISTINCT` 가 FIELDS 앞에 위치함
 ```abap
 SELECT FROM /dmo/connection
@@ -757,3 +757,34 @@ define view entity ZI_CONNECTION as select distinct from /dmo/connection
   distance_unit
 }
 ```
+</br>
+</br>
+</br>
+
+#### 2) 집계함수 표현
+- `AVG()` 는 결과 타입 기본값이 FLTP라서 별도 타입 지정 불필요
+```abap
+SELECT FROM /dmo/connection
+  FIELDS
+    MAX( distance ) AS maximum,
+    MIN( distance ) AS minimum,
+    SUM( distance ) AS total,
+    COUNT( * )      AS count_all,
+    COUNT( DISTINCT airport_from_id ) AS count_dist,
+    AVG( distance ) AS average.
+```
+- CDS에서는 `AVG()` 사용 시 반드시 결과 타입 지정 필요 → `as abap.fltp` 필수
+```abap
+define view entity ZI_CONNECTION as select from /dmo/connection
+{
+  max( distance )                         as maximum,
+  min( distance )                         as minimum,
+  sum( distance )                         as total,
+  count( * )                              as count_all,
+  count( distinct airport_from_id )       as count_dist,
+  avg( distance as abap.fltp )            as average
+}
+```
+</br>
+</br>
+</br>
