Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -785,3 +785,28 @@ define view entity ZI_CONNECTION as select from /dmo/connection
 </br>
 </br>
 </br>
+
+### 2) GROUP BY
+- 집계 함수와 일반 필드를 함께 사용하면 GROUP BY 필수
+- Quick Fix(`Ctrl+1`) 로 group by 자동 생성 가능
+```abap
+SELECT FROM /dmo/connection
+  FIELDS
+    carrier_id,
+    MAX( distance ) AS maximum,
+    MIN( distance ) AS minimum,
+    SUM( distance ) AS total,
+    COUNT( * )      AS count_all
+  GROUP BY carrier_id.
+```
+```abap
+define view entity ZI_CONNECTION as select from /dmo/connection
+{
+  carrier_id,
+  max( distance ) as maximum,
+  min( distance ) as minimum,
+  sum( distance ) as total,
+  count( * )      as count_all
+}
+group by carrier_id
+```
