Update 2-05. 프로그래밍 코드 최적화(02.25).md

--- a/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
+++ b/RAP/2-05. 프로그래밍 코드 최적화(02.25).md
@@ -789,6 +789,8 @@ define view entity ZI_CONNECTION as select from /dmo/connection
 ### 2) GROUP BY
 - 집계 함수와 일반 필드를 함께 사용하면 GROUP BY 필수
 - Quick Fix(`Ctrl+1`) 로 group by 자동 생성 가능
+
+#### 1) ABAP SQL 코드
 ```abap
 SELECT FROM /dmo/connection
   FIELDS
@@ -799,6 +801,8 @@ SELECT FROM /dmo/connection
     COUNT( * )      AS count_all
   GROUP BY carrier_id.
 ```
+
+#### 2) CDS 코드
 ```abap
 define view entity ZI_CONNECTION as select from /dmo/connection
 {
